# ferrum-flow

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md  REAME.md  cliff.ferrum-flow.toml  cliff.sync-plugin.toml  package-lock.json  package.json
.github/: FUNDING.yml
.github/actions/install-gpui-apt/: action.yml
.github/workflows/: ci.yml  publish.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: basic.rs  basic2.rs  bench.rs  embedded_canvas.rs  extension.rs  layout_windows.rs  nested_nodes.rs  plugin.rs  theme.rs
crates/core/src/: alignment_guides.rs  builder_state.rs  canvas.rs  command_interop.rs  copied_subgraph.rs  edge.rs  graph.rs  lib.rs  node.rs  plugin.rs  plugin_testing.rs  port_screen.rs  shared_state.rs  theme.rs  viewport.rs
crates/core/src/canvas/: node_renderer.rs  port_cache.rs  types.rs  undo.rs
crates/core/src/graph/: node.rs  store.rs
crates/core/src/plugin/: sync.rs  utils.rs
crates/core/src/plugins/: align.rs  background.rs  clipboard.rs  clipboard_ops.rs  context_menu.rs  delete.rs  fit_all.rs  focus_selection.rs  history.rs  minimap.rs  mod.rs  select_all_viewport.rs  snap_guides.rs  toast.rs  viewport.rs  viewport_frame.rs  zoom_controls.rs
crates/core/src/plugins/clipboard/: clipboard.rs  clipboard_ops.rs  copied_subgraph.rs  mod.rs  plugin.rs
crates/core/src/plugins/edge/: command.rs  mod.rs
crates/core/src/plugins/graph/: hierarchy.rs  mod.rs  plan.rs  pointer.rs  render_lod.rs
crates/core/src/plugins/graph/drag/: apply.rs  boundary.rs  mod.rs
crates/core/src/plugins/layout/: auto_layout.rs  force_directed.rs  layered_dag.rs  layered_then_force.rs  mod.rs  pack_isolated.rs  strategy.rs
crates/core/src/plugins/node/: command.rs  drag_events.rs  drag_shared.rs  interaction.rs  mod.rs  render_lod.rs
crates/core/src/plugins/port/: command.rs  interaction.rs  mod.rs  utils.rs  validator.rs
crates/core/src/plugins/selection/: mod.rs
crates/core/src/plugins/yrsync/: server.rs
crates/executor/: Cargo.toml  README.md
crates/executor/examples/: basic.rs
crates/executor/src/: context.rs  executor.rs  lib.rs  plugin.rs  registry.rs  update_node_data_command.rs
crates/ferrum-flow/: Cargo.toml
crates/ferrum-flow/examples/: basic.rs  basic2.rs  bench.rs  nested_nodes.rs  plugin.rs  renderer.rs
crates/ferrum-flow/src/: lib.rs
crates/meili/: Cargo.toml  README.md
crates/meili/src/: add_node_dialog.rs  commit_commands.rs  demo_graph.rs  main.rs  pick_state.rs  shell.rs  theme.rs
crates/meili/src/plugins/: add_node.rs  agent_background.rs  agent_hud.rs  meili_port_interaction.rs  meili_theme.rs  mod.rs  node_kind_preset.rs  node_type_picker.rs  pick_link_event.rs
crates/meili/src/renderers/: mod.rs  workflow_node.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: align.rs  background.rs  context_menu.rs  delete.rs  fit_all.rs  focus_selection.rs  history.rs  lib.rs  minimap.rs  select_all_viewport.rs  snap_guides.rs  toast.rs  viewport.rs  viewport_frame.rs  zoom_controls.rs
crates/plugins/src/clipboard/: clipboard_ops.rs  copied_subgraph.rs  plugin.rs
crates/plugins/src/edge/: command.rs  mod.rs
crates/plugins/src/graph/: hierarchy.rs  mod.rs  plan.rs  pointer.rs
crates/plugins/src/graph/drag/: apply.rs  boundary.rs  interaction.rs  mod.rs  policy.rs
crates/plugins/src/layout/: auto_layout.rs  force_directed.rs  layered_dag.rs  pack_isolated.rs  pipeline.rs  strategy.rs
crates/plugins/src/node/: command.rs  drag_events.rs  drag_shared.rs  interaction.rs  mod.rs  render_lod.rs
crates/plugins/src/port/: command.rs  interaction.rs  utils.rs  validator.rs
crates/plugins/src/selection/: mod.rs
crates/shader/: .gitignore  Cargo.toml
crates/shader/src/: demo_graph.rs  demo_menu.rs  graph_io.rs  lib.rs  main.rs  persist_plugin.rs  preview_rig.rs  shader_render.rs  studio.rs  theme.rs  validate.rs  viewport_fit.rs  wgpu_preview.rs  wgsl_codegen.rs  wgsl_preview.rs
crates/sync_plugin/: Cargo.toml  README.md
crates/sync_plugin/examples/: basic.rs  collab_two_windows.rs  server.rs
crates/sync_plugin/src/: assets.rs  dev_ws_relay.rs  lib.rs  plugin.rs  server.rs
docs/: architecture.md
examples/: basic.rs  bench.rs  extension.rs  extenson.rs  sync.rs  sync2.rs
examples/yrsync-ws-server/: Cargo.toml
examples/yrsync-ws-server/src/: main.rs
src/: canvas.rs  edge.rs  graph.rs  lib.rs  node.rs  plugin.rs  renderer.rs  viewport.rs
src/canvas/: edge.rs  node_renderer.rs  port_cache.rs  types.rs  undo.rs  utils.rs
src/graph/: operation.rs  store.rs  sync.rs
src/plugin/: sync.rs  utils.rs
src/plugins/: background.rs  delete.rs  history.rs  mod.rs  viewport.rs
src/plugins/edge/: command.rs  mod.rs
src/plugins/node/: command.rs  interaction.rs  mod.rs  renderer.rs
src/plugins/port/: command.rs  interaction.rs  mod.rs  utils.rs
src/plugins/selection/: mod.rs
src/plugins/yrsync/: mod.rs  server.rs
