[package]
name = "ferrum-flow"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
description = "A high-performance node-based editor framework built with Rust and GPUI."

[dependencies]
anyhow = "1.0.102"
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.50.0", features = ["full","rt-multi-thread"]}
yrs = {version = "0.25.0", features = ["sync"] }

tokio-tungstenite = "0.21"
futures = "0.3"
