
[workspace]
members = [
  "crates/core",
  "crates/executor",
  "crates/meili", "crates/shader",
  "crates/sync_plugin",
]
resolver = "2"

[workspace.dependencies]

ferrum-flow = { path = "crates/core" }

gpui = "0.2.2"
anyhow = "1.0.102"
serde_json = "1"
futures = "0.3"
uuid = { version = "1.23.0", features = ["v4"] }
rust-embed = "8"
serde = { version = "1" }
