[package]
name = "ferrum-flow"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
repository = "https://github.com/tu6ge/ferrum-flow"
description = "A high-performance node-based editor framework built with Rust and GPUI."

[dependencies]
anyhow = "1.0.102"
gpui = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
