[package]
name = "ferrum-flow-executor"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
repository = "https://github.com/tu6ge/ferrum-flow"
description = "A simple node-based editor executor."

[dependencies]
ferrum-flow = { workspace = true }

anyhow = { workspace = true }
serde_json = { workspace = true }
