[package]
name = "ferrum-flow"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
repository = "https://github.com/tu6ge/ferrum-flow"
keywords = ["gui", "gpui", "node-editor", "workflow", "flow-editor"]
description = "A high-performance node-based editor framework built with Rust and GPUI."

[dependencies]
