[package]
name = "ferrum-flow-plugins"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
repository = "https://github.com/tu6ge/ferrum-flow"
description = "A FerrumFlow built-in plugins library."

[dependencies]
ferrum-flow-core = { workspace = true, features = ["testing"] }
gpui = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
# used by background plugin
image = { workspace = true }
# used by background plugin
smallvec = { workspace = true }
