[package]
name = "ferrum-flow-sync-plugin"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["tu6ge"]
repository = "https://github.com/tu6ge/ferrum-flow"
description = "A high-performance node-based editor framework built with Rust and GPUI."

[features]
default = []
## Sample WebSocket relay (`run_dev_ws_relay`) for local demos; enables `tokio/net`.
dev-ws-relay = ["tokio/net", "tokio/macros"]

[dependencies]
ferrum-flow = { workspace = true }
tokio = { version = "1.50.0", features = [], default-features = false }
yrs = { version = "0.25.0", features = ["sync"] }

tokio-tungstenite = "0.21"
futures = { workspace = true }
serde_json = { workspace = true }
gpui = { workspace = true }
uuid = { workspace = true }
rust-embed = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }

[[example]]
name = "server"
required-features = ["dev-ws-relay"]

[[example]]
name = "collab_two_windows"
required-features = ["dev-ws-relay"]
